@@ -44,6 +44,8 @@
 <b>Bug Fix:</b> Installation: Reordered SQL files so that new installations will succeed. (<em>2008-10-14 - Adam Franco</em>)</li>
 		<li>
 <b>Bug Fix:</b> Installation: Plugin SQL files now get run automatically on install. (<em>2008-10-14 - Adam Franco</em>)</li>
+		<li>
+<b>Bug Fix:</b> Installation: New installations now have a 'jadministrator-test_site' placeholder added so that it is straightforward how to create a site and test if Segue is operational. (<em>2008-10-14 - Adam Franco</em>)</li>
 	</ul>
 <br><h2>Version 2.2.5.0</h2>
 <h3>2008-10-13</h3>
